This project adheres to [[http://semver.org][Semantic Versioning]].

* [[https://github.com/ryuslash/yoshi-theme/compare/v6.1.0...HEAD][Unreleased]]
** ADDED Colors for modes using ansi-color.el, such as Eshell

** ADDED Some package faces

   Add the package faces: =package-status-avail-obso=,
   =package-status-available=, =package-status-dependency=,
   =package-status-installed=.

** CHANGED the color of high-scoring unread mails in gnus

** CHANGED the color of normal ticked mails in gnus

** CHANGED the padding around the mode-line

** REMOVED the 10th rainbow delimiters depth face

* [[https://github.com/ryuslash/yoshi-theme/compare/v6.0.0...v6.1.0][6.1.0]] -- 2015-11-20
  :PROPERTIES:
  :CUSTOM_ID: release-6.1.0
  :END:
** ADDED Some helm faces

   Add the helm faces: =helm-M-x-key=, =helm-buffer-directory=,
   =helm-buffer-file=, =helm-buffer-not-saved=, =helm-buffer-process=,
   =helm-buffer-size=, =helm-match=, =helm-selection=, =helm-source-header=,
   =helm-ff-directory=, =helm-ff-dotted-directory=, =helm-ff-executable=,
   =helm-ff-file=, =helm-ff-invalid-symlink=, =helm-ff-symlink=.

** ADDED Some circe faces

   Add the circe faces: =circe-highlight-nick-face= and
   =circe-server-face=.

** ADDED Some lui faces

   Add the lui faces: =lui-button-face=, =lui-time-stamp-face=.

** ADDED CSS faces

   Add the CSS faces: =css-property=, =css-selector= and
   =css-proprietary-property=.

** ADDED =magit-section-highlight= face

** ADDED =highlight-numbers-number= face

** FIXED Make markdown header faces work without loading Org

   Stop making the =markdown-header-face-*= faces inherit from the
   equivalent =org-level-*= faces, this kept the markdown faces from
   working if Org mode wasn't loaded.

* [[https://github.com/ryuslash/yoshi-theme/compare/v5.13.0...v6.0.0][6.0.0]] -- 2015-08-31
  :PROPERTIES:
  :CUSTOM_ID: release-6.0.0
  :END:

** ADDED =js2-function-param= face.

** ADDED =magit-log-head-label-head= face.
